first light....can see unmodulated signal like old tv detuned to fm radio 	modified:   interface.css 	modified:   interface.html 	modified:   interface.js 	modified:   radiocontroller.js 	modified:   waterfall.js

--- a/extension/interface.html
+++ b/extension/interface.html
@@ -46,7 +46,7 @@ limitations under the License.
 
 
 <div id="annex" class="annex" >
-  <canvas id="waterfall" class="waterfall" title="waterfall" tabindex="77">
+  <canvas id="waterfallCanvas" class="waterfall" title="waterfall" tabindex="77">
 waterfall
   </canvas>
 </div>
