add elbonian region for testing, can now see signal a little better...like an old TV 	modified:   frequencies.js 	modified:   settings.html 	modified:   waterfall.js

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -28,6 +28,7 @@ limitations under the License.
 </head>
 <body>
 <p><label for="region">Region:</label> <select id="region" name="region">
+<option value="EB">Elbonia</option>
 <option value="JP">Japan</option>
 <option value="IT">Italy</option>
 <option value="NA">US and Canada</option>
