added code to read in bytes from file and FFT+graph them.  result does not look right yet, but the loading works 	modified:   extension/interface.html 	modified:   extension/interface.js 	modified:   extension/sampleSaver.js 	modified:   extension/waterfall.js

--- a/extension/interface.html
+++ b/extension/interface.html
@@ -58,6 +58,7 @@ limitations under the License.
 
 <div id="annex" class="annex" >
   <button id="debugButton" title="ayvex debug">debug button</button>
+  <button id="sampleSaverButton" title="sampleSaver">use Saved samples</button>
   <canvas id="waterfallCanvas" class="waterfall" title="waterfall" tabindex="77">
 waterfall
   </canvas>
