added buttons that dont work yet. also some old cosmetic changes to graph display 	modified:   extension/interface.html 	modified:   extension/waterfall.js

--- a/extension/interface.html
+++ b/extension/interface.html
@@ -57,8 +57,21 @@ limitations under the License.
 
 
 <div id="annex" class="annex" >
+<table><tr><td>
+  <button id="loadCsv" title="loadCsv">loadCsv</button>
+  <button id="saveCsv" title="saveCsv">saveCsv</button>
+  <button id="capture" title="capture">capture</button>
+  <button id="graph1"  title="graph1">graph1</button>
+  <button id="graph2" title="graph2">graph2</button>
+</td>
+<tr>
+<td>
   <button id="debugButton" title="ayvex debug">debug button</button>
   <button id="sampleSaverButton" title="sampleSaver">use Saved samples</button>
+</td>
+
+</tr></table>
+
   <canvas id="waterfallCanvas" class="waterfall" title="waterfall" tabindex="77">
 waterfall
   </canvas>
